--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ website:
 format:
   html:
     theme: 
-      light: cerulean
+      light: pulse
       dark: darkly
     css: styles.css
     toc: true
